/*
 * Copyright (c) 2021 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import org.jetbrains.intellij.tasks.PrepareSandboxTask


plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.2'
    id 'com.google.protobuf' version '0.8.15'
}

group 'ohos.devtools'
version '1.06.210428_Ia06bb6beaf4128368ddb697bde7dd59de608ae9a'

project.sourceCompatibility=1.11
project.targetCompatibility=1.11

repositories {
    mavenCentral()
}

dependencies {
    compile "org.xerial:sqlite-jdbc:3.34.0"
    implementation 'io.grpc:grpc-netty-shaded:1.36.0'
    implementation 'io.grpc:grpc-protobuf:1.36.0'
    implementation 'io.grpc:grpc-stub:1.36.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.75'
    implementation group: 'com.alibaba', name: 'druid', version: '1.1.6'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
    implementation group: 'org.easytesting', name: 'fest-swing', version: '1.2'
    testImplementation group: 'io.grpc', name: 'grpc-testing', version: '1.36.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2020.3.2'
    pluginName 'ohosprofiler'
}

patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}
test {
    useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}


tasks.withType(PrepareSandboxTask) {
    from("src/main/resources/ohos") {
        into("ohosprofiler/ohos")
        include("**")
    }
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.12.0"
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.36.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
   }
}

buildSearchableOptions {
    enabled = false
}

patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
    version = project.version
    sinceBuild = '202'
    untilBuild = '203.*'
}